qinglong/base/qinglong-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qinglong
  name: qinglong
spec:
  ports:
    - name: qinglong
      port: 5700
      targetPort: 5700
      protocol: TCP
  type: ClusterIP
  selector:
    app: qinglong
