qinglong/base/qinglong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qinlong
spec:
  ingressClassName: nginx
  rules:
  - host: ql.labint.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qinglong
            port:
              number: 5700
